modify jar_generator http://lean.xiaojukeji.com/project/ULTRON_REQ-1024/board